--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,41 @@
-#Node.js dependencies
+# === Shared ===
+node_modules/
+dist/
+build/
+.vite/
+.env
+.env.*.local
+*.log
+*.tsbuildinfo
+.vscode/
+.idea/
+.DS_Store
+Thumbs.db
 
-node_modules/ client/node_modules/ server/node_modules/
+# === Client specific ===
+client/node_modules/
+client/dist/
+client/.vite/
+client/.next/         # In case you add Next.js later
+client/coverage/
+client/*.tsbuildinfo
 
-#Build output
+# === Server (Strapi) specific ===
+server/node_modules/
+server/.cache/
+server/.tmp/
+server/build/
+server/public/uploads/  # Optional – ignore if you don't want uploaded media in Git
 
-dist/ build/
+# === Logs ===
+logs/
+*.log
 
-#Logs
+# === OS-specific ===
+*.swp
+*.swo
 
-logs/ .log npm-debug.logyarn-debug.log* yarn-error.log*
-
-#Environment variables
-
-.env .env.local .env.development.local .env.test.local .env.production.local
-
-#Editor directories and files
-
-.vscode/ .idea/ *.suo .ntvs*.njsproj *.sln *.swp
-
-#OS generated files
-
-.DS_Store Thumbs.db
-
-#Lock files (optional, include if you want to commit them)
-
+# === Dependency Lockfiles ===
 package-lock.json
-
 yarn.lock
+pnpm-lock.yaml
