--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,10 @@
     "react-redux": "^9.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.5.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
+    "toastify": "^2.0.1",
     "tw-animate-css": "^1.2.5",
     "yup": "^1.6.1"
   },
